# OpenbindWaterCompletion

./: .gitignore  README.md  pyproject.toml
analysis/: analyse_methods.py  apply_syymetry_label.ipynb  create_annotation_set.py  scramble_annotation_set.py
src/water_completion_methods/: base_structure_waters.py  findwaters.py  nearby_atoms.py
