[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "OpenbindLigandBuild"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.9",
]
description = "A repository to test autobuilding of PanDDA 2 event maps"
dependencies = [
    'numpy',
    'pandas',
    'pyyaml', 
    'gemmi',
    'joblib'
] 
dynamic = ["version"]
license.file = "LICENSE"
readme = "README.md"
requires-python = ">=3.9"

[tool.pytest.ini_options]
addopts = "-x"
testpaths = ['tests']

[tool.uv.pip]
extra-index-url = ["https://download.pytorch.org/whl/cpu"]